--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <nav>
         <a class="right" href="https://www.buymeacoffee.com/acroynon" target="_blank">
             <i class="fas fa-coffee"></i>
-            &nbsp Support (buymeacoffee)</a>
+            <span>&nbsp Support (buymeacoffee)</span>
+          </a>
     </nav>
     <div id="main-content">
         <h1>All Idea Generators</h1>
-        <a href="Simple Story Prompt Generator/index.html">
-            Simple Story Prompt Generator&nbsp            
+        <a href="simple-story-prompt-generator/index.html">
+            <span>Simple Story Prompt Generator&nbsp</span>
+            <i class="fa-solid fa-hand-point-right"></i>
+        </a>
+        <a href="custom-generator/index.html">
+            <span>Custom Generator&nbsp</span>
             <i class="fa-solid fa-hand-point-right"></i>
         </a>
     </div>
