added more generators; character description, superhero/villain name, simple name, setting

--- a/index.html
+++ b/index.html
@@ -17,9 +17,25 @@
           </a>
     </nav>
     <div id="main-content">
-        <h1>All Idea Generators</h1>
+        <h1>All Generators</h1>
         <a href="simple-story-prompt-generator/index.html">
             <span>Simple Story Prompt Generator&nbsp</span>
+            <i class="fa-solid fa-hand-point-right"></i>
+        </a>
+        <a href="simple-name-generator/index.html">
+            <span>Simple Name Generator&nbsp</span>
+            <i class="fa-solid fa-hand-point-right"></i>
+        </a>
+        <a href="super-hero-villain-name-generator/index.html">
+            <span>Simple Hero/Villain Generator&nbsp</span>
+            <i class="fa-solid fa-hand-point-right"></i>
+        </a>
+        <a href="character-description-generator/index.html">
+            <span>Character Description Generator&nbsp</span>
+            <i class="fa-solid fa-hand-point-right"></i>
+        </a>
+        <a href="simple-setting-generator/index.html">
+            <span>Simple Setting Generator&nbsp</span>
             <i class="fa-solid fa-hand-point-right"></i>
         </a>
         <a href="custom-generator/index.html">
@@ -29,3 +45,21 @@
     </div>
   </body>
 </html>
+
+<!--
+  TODO:
+    - Generators
+      - Common name generator
+          first + last name
+          selectable gender (male, female, unisex, any)
+      - Super hero/villain name
+          animal/noun/etc + (man/boy/woman/girl)
+      - character description
+          personality
+          physical description (hair, height, face, etc)
+      - Setting description
+          place, time of day, weather, etc
+    - Add a bunch more words
+        - rename BUT -> PROBLEM
+        - rename WANTS -> DESIRE
+-->
