Added more to, and organised, wordlists

--- a/custom-generator/index.html
+++ b/custom-generator/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="info-box">
             <h2>Information</h2>
-            <h4 class="collapsible-trigger collapsible-trigger-nested">Creating Templates</h4>
+            <h4 class="collapsible-trigger collapsible-trigger-nested">How To Create Templates</h4>
             <div class="collapsible-content">
                 <p>
                     This system works essentially like <a href="https://en.wikipedia.org/wiki/Mad_Libs">Mad Libs</a> 
@@ -49,7 +49,7 @@
                         <li><i><b>&ltNOUN|ADJECTIVE&gt</b></i> will pick a random word from either the 'NOUN' or 'ADJECTIVE' lists.</li>
                         <li><i><b>&ltNOUN&gt{2}</b></i> will pick two random words from the 'NOUN' list</li>
                         <li><i><b>&ltNOUN&gt{1..3}</b></i> will pick a random number (between 1 and 3 inclusively) of words from the 'NOUN' list</li>
-                        <li><i><b>&ltJOB|CHARACTER|ANIMAL&gt{3..10}</b></i> will pick a random number (between 3 and 10 inclusively) of words from the 'JOB', 'CHARACTER', or 'ANIMAL' lists</li>
+                        <li><i><b>&ltJOB|GENERIC_CHARACTER|ANIMAL&gt{3..10}</b></i> will pick a random number (between 3 and 10 inclusively) of words from the 'JOB', 'GENERIC_CHARACTER', or 'ANIMAL' lists</li>
                     </ul>
                     <i>
                     * When generating more than one word the usage of commas and/or 'and' will be taken care of for you. 
